--- a/notebooks/18-04-23_divergence_authors_within-across_boxplots.ipynb
+++ b/notebooks/18-04-23_divergence_authors_within-across_boxplots.ipynb
@@ -69,9 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Most downloaded books (in english)"
    ]
@@ -395,9 +393,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py36",
    "language": "python",
-   "name": "python3"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -409,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
