--- a/notebooks/18-04-23_divergence_subjects-within-across_boxplots.ipynb
+++ b/notebooks/18-04-23_divergence_subjects-within-across_boxplots.ipynb
@@ -358,9 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## vary the threshold and then calculate the number of correct classifications\n",
     "## ROC as a function of alpha"
@@ -445,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py36",
    "language": "python",
-   "name": "python3"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -459,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
