--- a/notebooks/18-04-23_divergence_textlength.ipynb
+++ b/notebooks/18-04-23_divergence_textlength.ipynb
@@ -250,9 +250,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py36",
    "language": "python",
-   "name": "python3"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -264,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
