--- a/notebooks/LowDimensionalProjection.ipynb
+++ b/notebooks/LowDimensionalProjection.ipynb
@@ -895,6 +895,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fix names"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# run only once!\n",
+    "for i, file in enumerate(glob.glob(\"../figures/UMAP*\")):\n",
+    "\n",
+    "    head, tail = os.path.split(file)\n",
+    "    newfile = os.path.join(head, f\"Fig{i}_\"+tail)\n",
+    "\n",
+    "    ! mv {file} {newfile}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
