--- a/notebooks/DivergenceBookshelves.ipynb
+++ b/notebooks/DivergenceBookshelves.ipynb
@@ -214,13 +214,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think we might want to eliminate magazines??? See the Atlantic ..."
+   ]
   },
   {
    "cell_type": "code",
