--- a/notebooks/Bookshelves.ipynb
+++ b/notebooks/Bookshelves.ipynb
@@ -17,11 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import matplotlib as mpl\n",
     "\n",
     "mpl.rcParams['axes.titlesize'] = 16\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +44,15 @@
        "<Figure size 720x72 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
    "source": [
     "import seaborn as sns\n",
-    "sns.palplot(sns.color_palette())\n"
+    "sns.palplot(sns.color_palette())"
    ]
   },
   {
@@ -70,8 +71,7 @@
    "source": [
     "# PG Bookshelves\n",
     "We use PG bookshelves as labels, see here [here](http://www.gutenberg.org/wiki/Category:Bookshelf).\n",
-    "They are better than the 'genre' metadata field. **WHY???**\n",
-    "\n",
+    "This notebook shows in which sense BS are better than subjects.\n",
     "This notebook uses the bookshelves generated in the main `gutenberg` repo.\n",
     "For a more self-contained, older version, see `notebooks/old/Bookshelves_generation.ipynb`."
    ]
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../gutenberg/src/\")\n",
     "from metaquery import meta_query\n",
-    "mq = meta_query(path=\"../../gutenberg-frozen-2018-07-18/metadata/metadata.csv\")"
+    "mq = meta_query(path=\"../../gutenberg-frozen-2018-07-18/metadata/metadata.csv\", filter_exist=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12078, 236)"
+       "(0, 236)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
