--- a/notebooks/ProcessingStatistics.ipynb
+++ b/notebooks/ProcessingStatistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_df = pd.read_table(\"../../gutenberg/.log\", names=[\"PGcode\", \"tokenizer\", \"lines_before\", \"lines_after\", \"tokens\", \"types\"])\n",
+    "log_df = pd.read_table(\"../../gutenberg-frozen-2018-07-18/.log\",\n",
+    "                       names=[\"PGcode\", \"tokenizer\", \"lines_before\", \"lines_after\", \"tokens\", \"types\"])\n",
     "log_df.drop_duplicates(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,67 +50,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gutenberg_dir = \"../../gutenberg/\""
+    "gutenberg_dir = \"../../gutenberg-frozen-2018-07-18/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_raw = len(glob.glob(join(gutenberg_dir, \"data\", \"raw\", f\"PG*_raw.txt\")))\n",
     "n_text = len(glob.glob(join(gutenberg_dir, \"data\", \"text\", f\"PG*_text.txt\")))\n",
     "n_tokens = len(glob.glob(join(gutenberg_dir, \"data\", \"tokens\", f\"PG*_tokens.txt\")))\n",
-    "n_raw = len(glob.glob(join(gutenberg_dir, \"data\", \"counts\", f\"PG*_counts.txt\")))"
+    "n_counts = len(glob.glob(join(gutenberg_dir, \"data\", \"counts\", f\"PG*_counts.txt\")))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56002"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Load metadata"
+    "n_raw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55905"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../gutenberg/src/\")\n",
-    "from metaquery import meta_query"
+    "n_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55905"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "meta = meta_query(path=\"../../gutenberg/metadata/metadata.csv\")\n",
-    "meta_df = meta.df\n",
-    "n_meta = len(meta_df)"
+    "n_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55905"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_counts"
+   ]
   },
   {
    "cell_type": "code",
